# energy-consumption-analysis

./: Energy-Consumption-EDA.ipynb  energy_consumption_countries.csv  main.py  pyproject.toml
